# idakit

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  clippy.toml  mise.toml  rust-toolchain.toml
.cargo/: mutants.toml
.config/: nextest.toml
.github/: release-please-config.json  release-please-manifest.json  renovate.json
.github/actions/fetch-corpus/: action.yml
.github/actions/fetch-runtime/: action.yml
.github/docker/: Dockerfile
.github/workflows/: ci.yml  coverage.yml  release-please.yml  release.yml
crates/idakit/: CHANGELOG.md  Cargo.toml  build.rs
crates/idakit-sys/: .clang-tidy  CHANGELOG.md  Cargo.toml  README.md  build.rs  tsan-suppressions.txt
crates/idakit-sys-codegen/: Cargo.toml
crates/idakit-sys-codegen/src/: dsl.rs  emit.rs  facade_consts.rs  lib.rs  model.rs
crates/idakit-sys-codegen/src/domains/: bytes.rs  cfg.rs  export.rs  function.rs  hexrays.rs  import.rs  instruction.rs  meta.rs  mod.rs  name.rs  netnode.rs  range.rs  reference.rs  segment.rs  strings.rs  type_build.rs  types.rs
crates/idakit-sys-codegen/src/domains-tmp/: bytes.rs  cfg.rs  export.rs  function.rs  hexrays.rs  meta.rs  mod.rs  name.rs  range.rs  type_build.rs
crates/idakit-sys-codegen/src/visitors/: ctree.rs  mod.rs  typewalk.rs
crates/idakit-sys/build_support/: dsl.rs  emit.rs  gen.rs  model.rs  netnode.rs  spec.rs  visitor_spec.rs
crates/idakit-sys/build_support/domains/: netnode.rs
crates/idakit-sys/examples/: bytesxref.rs  decompile.rs  read.rs  typeinfo.rs  writeop.rs
crates/idakit-sys/facade/: README.md  abi.h  bytes.cpp  bytes_custom.cc  cfg.cpp  cfg2_cxx.cc  cfg2_cxx.h  cfg_check_cxx.cc  cfg_check_cxx.h  cfg_cxx.cc  cfg_cxx.h  cfunc_cxx.cc  cfunc_cxx.h  cfunc_shims.cpp  cfunc_shims.h  ctree_bridge.cpp  ctree_bridge.h  ctree_cxx.cc  ctree_cxx.h  custom_escape_hatch.cc  db.cpp  decode.cpp  enum_edit.cpp  export.cpp  export_custom.cc  func_sig.cpp  function.cpp  function_custom.cc  gen_bytes.cc  gen_cfg.cc  gen_export.cc  gen_function.cc  gen_hexrays.cc  gen_import.cc  gen_instruction.cc  gen_meta.cc  gen_name.cc  gen_netnode.cc  gen_range.cc  gen_reference.cc  (+64 more)
crates/idakit-sys/src/: bridge.rs  bridge_cfg.rs  bridge_cfg2.rs  bridge_cfg_check.rs  bridge_cfunc.rs  bridge_ctree.rs  bridge_gen.rs  bridge_import.rs  bridge_probe.rs  bridge_probe_ext.rs  bridge_qvec.rs  bridge_range.rs  bridge_typewalk.rs  bridge_visitors.rs  bytes.rs  cfg.rs  cfg_flags.rs  export.rs  frame.rs  frame_flags.rs  func.rs  function.rs  function_flags.rs  hexrays.rs  import.rs  insn.rs  instruction.rs  lib.rs  meta.rs  name.rs  name_flags.rs  netnode.rs  reference.rs  runtime.rs  segment.rs  segment_flags.rs  strings.rs  ty.rs  ty_build.rs  xref.rs
crates/idakit-sys/tests/: doc_alias.rs  traps.rs
crates/idakit/examples/: accept_eula.rs  actor.rs  analyze.rs  ctree_dump.rs  edits.rs  make_fixture.rs  probe_argloc.rs  probe_ctree_counts.rs  probe_names.rs  taint.rs  type_diff.rs  types.rs
crates/idakit/proptest-regressions/types/diff/canonical/: property.txt
crates/idakit/src/: address.rs  arena.rs  bitness.rs  bytes.rs  cfg.rs  claim.rs  corpus.rs  data.rs  decompile.rs  doctest.rs  ea.rs  error.rs  export.rs  ffi.rs  flowchart.rs  frame.rs  func.rs  function.rs  import.rs  kernel.rs  lib.rs  location.rs  macros.rs  meta.rs  name.rs  raw.rs  reference.rs  search.rs  segment.rs  stack.rs  strings.rs  ty.rs  xref.rs
crates/idakit/src/ctree/: arena.rs  extract.rs  mod.rs  node.rs  ops.rs  query.rs  render.rs  tree.rs  types.rs
crates/idakit/src/decompiler/: mod.rs
crates/idakit/src/decompiler/ctree/: extract.rs  mod.rs  node.rs  ops.rs  query.rs  render.rs  tree.rs
crates/idakit/src/function/: signature.rs
crates/idakit/src/insn/: decode.rs  dtype.rs  mod.rs  reg.rs
crates/idakit/src/instruction/: data_type.rs  decode.rs  evex.rs  iter.rs  mod.rs  register.rs
crates/idakit/src/netnode/: arrays.rs  bytes.rs  mod.rs  persist.rs  tag.rs  tagged.rs
crates/idakit/src/types/: builder.rs  canonical.rs  catalog.rs  edit.rs  expr.rs  mod.rs  named.rs  repr.rs  resolved.rs  sink.rs  tinfo.rs
crates/idakit/src/types/diff/: canonical.rs  catalog.rs  mod.rs
crates/idakit/src/types/diff/canonical/: engine.rs  mod.rs  model.rs  property.rs  tests.rs
crates/idakit/tests/: attributes.rs  builder.rs  cfg.rs  corpus_matrix.rs  ctor.rs  ctree_nodes.rs  cxx_error.rs  data.rs  dbinfo.rs  decode_sweep.rs  decompile_cache.rs  disasm.rs  doc_alias.rs  evex.rs  faults.rs  frame.rs  function_name.rs  function_scalars.rs  name.rs  netnode.rs  reopen_is_pristine.rs  roundtrip.rs  search.rs  side_effects.rs  signals.rs  strings.rs  symbols.rs  tinfo.rs  write.rs
crates/idakit/tests/common/: checks.rs  corpus.rs  harness.rs  macros.rs  mod.rs
crates/idakit/tests/fixtures/: avx512.asm  ctree_kinds.cpp  sample.c  vtbl.cpp
crates/idakit/tests/write/: location.rs  type_apply.rs  type_enum.rs  type_function.rs  type_member.rs
tools/: profile_junit.py
