[workspace]
resolver = "2"
members = ["crates/idakit-sys", "crates/idakit-sys-codegen", "crates/idakit"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Xevion/idakit"
rust-version = "1.88"

[workspace.lints.rust]
# `coverage_nightly` is set only by `just coverage`; declaring it keeps the cfg_attrs it gates
# from tripping unexpected_cfgs on a normal build.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
missing_docs = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cast family: pointer/address/RVA arithmetic throughout the FFI layer; these don't add safety here.
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
ptr_as_ptr = "allow"
ref_as_ptr = "allow"
borrow_as_ptr = "allow"

# Noise, conflicts, or deliberate design.
doc_markdown = "allow"             # identifier-backtick nitpicking
redundant_pub_crate = "allow"      # fights the flat `pub use module::*` re-export pattern
option_if_let_else = "allow"       # forces ugly map_or/and_then chains
wildcard_imports = "allow"         # idakit-sys's flat namespace re-exports every module
unnecessary_debug_formatting = "allow"
missing_const_for_fn = "allow"     # nursery; const is a forward API commitment, not free
struct_excessive_bools = "allow"   # flat bool config binds 1:1 to fields

# Mutation runs build hundreds of near-identical test binaries, each relinking against libida.so.
# They only ever need pass/fail, so full DWARF on every one is write traffic bought for nothing.
[profile.mutants]
inherits = "test"
debug = "none"
