[package]
name = "idakit-sys"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Raw FFI bindings to IDA Pro's idalib runtime and the idakit C++ facade"
keywords = ["ida", "ida-pro", "ffi", "bindings", "reverse-engineering"]
categories = ["external-ffi-bindings", "development-tools"]
# Sole linker of native `ida`; lets build.rs publish DEP_IDA_* to dependents.
links = "ida"

# build.rs detects DOCS_RS and skips the native compile/link (no IDA on docs.rs).
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
# Compiles the facade's fault-injection shim (`idakit_test_fatal`) so the trap tests can drive
# a fatal through `guarded<>` and prove it is caught. Off by default and never enabled by
# dependents; the self dev-dependency below turns it on only for this crate's own tests, so
# no `abort()`/`exit()` shim reaches a production build.
test-shims = []

[build-dependencies]
cc = "1"
cxx-build = "1.0.197"
cxx-gen = "=0.7.197"
dirs = "6.0.0"
libloading = "0.9.0"
proc-macro2 = "1.0.106"
quote = "1.0.46"

# Self dev-dependency that turns on `test-shims` for this crate's own tests/examples. Keyed
# under an alias (not the crate name) so release-please's cargo-workspace graph, which keys
# edges on the dependency-table name, doesn't read it as an idakit-sys -> idakit-sys cycle.
[dev-dependencies]
idakit-sys-shims = { path = ".", package = "idakit-sys", features = ["test-shims"] }

[[example]]
name = "read"
path = "examples/read.rs"

[[example]]
name = "decompile"
path = "examples/decompile.rs"

[[example]]
name = "bytesxref"
path = "examples/bytesxref.rs"

[[example]]
name = "writeop"
path = "examples/writeop.rs"

[dependencies]
cxx = "1.0.197"
moveit = { version = "0.6.0", features = ["cxx"] }
