[package]
name = "idakit-sys"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Raw FFI bindings to IDA Pro's idalib runtime and the idakit C++ facade"
keywords = ["ida", "ida-pro", "ffi", "bindings", "reverse-engineering"]
categories = ["external-ffi-bindings", "development-tools"]
# Sole linker of native `ida`; lets build.rs publish DEP_IDA_* to dependents.
links = "ida"

# build.rs detects DOCS_RS and skips the native compile/link (no IDA on docs.rs).
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[build-dependencies]
cc = "1"
cxx-build = "1.0.197"
dirs = "6.0.0"
idakit-sys-codegen = { path = "../idakit-sys-codegen" }
libloading = "0.9.0"

[[example]]
name = "read"
path = "examples/read.rs"

[[example]]
name = "decompile"
path = "examples/decompile.rs"

[[example]]
name = "bytesxref"
path = "examples/bytesxref.rs"

[[example]]
name = "writeop"
path = "examples/writeop.rs"

[dependencies]
bitflags = "2.13.0"
cxx = "1.0.197"
moveit = { version = "0.6.0", features = ["cxx"] }
num_enum = "0.7.6"
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
assert2 = "0.4.0"
rstest = "0.26.1"
