[package]
name = "idakit"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Idiomatic Rust bindings for IDA Pro's idalib kernel"
keywords = ["ida", "ida-pro", "reverse-engineering", "decompiler", "disassembler"]
categories = ["api-bindings", "development-tools"]
readme = "../../README.md"

# build.rs detects DOCS_RS and skips the native compile/link (no IDA on docs.rs).
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
bon = "3.9.3"
idakit-sys = { path = "../idakit-sys" }
num_enum = "0.7.6"
snafu = "0.9.1"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"

[[example]]
name = "actor"
path = "examples/actor.rs"

[[example]]
name = "taint"
path = "examples/taint.rs"

[[example]]
name = "analyze"
path = "examples/analyze.rs"

[[example]]
name = "ctree_dump"
path = "examples/ctree_dump.rs"

# No libtest harness: these own `fn main()` to control the process lifetime around the
# kernel thread that `Ida::run` spawns.
[[test]]
name = "roundtrip"
harness = false

# Live constructor-matcher check; needs g++ + IDA (skips without g++, can't run in CI).
[[test]]
name = "ctor"
harness = false

[dev-dependencies]
assert2 = "0.4.0"
proptest = "1.11.0"
rstest = "0.26.1"
