[package]
name = "idakit"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Idiomatic Rust bindings for IDA Pro's idalib kernel"
keywords = ["ida", "ida-pro", "reverse-engineering", "decompiler", "disassembler"]
categories = ["api-bindings", "development-tools"]
readme = "../../README.md"

[lints]
workspace = true

# build.rs detects DOCS_RS and skips the native compile/link (no IDA on docs.rs).
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
all-features = true

[dependencies]
bon = "3.9.3"
cxx = "1.0.197"
dotenvy = "0.15.7"
idakit-sys = { path = "../idakit-sys", version = "0.1.1" }
num_enum = "0.7.6"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
siphasher = "1.0.3"
snafu = "0.9.1"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"

[[example]]
name = "actor"
path = "examples/actor.rs"
doc-scrape-examples = true

[[example]]
name = "taint"
path = "examples/taint.rs"
doc-scrape-examples = true

[[example]]
name = "analyze"
path = "examples/analyze.rs"
doc-scrape-examples = true

[[example]]
name = "ctree_dump"
path = "examples/ctree_dump.rs"
doc-scrape-examples = true

# Runtime-generated corpus matrix (one case per db x check); needs a custom harness.
[[test]]
name = "corpus_matrix"
path = "tests/corpus_matrix.rs"
harness = false

# The integration tests under tests/ are ordinary `#[test]` binaries (auto-discovered). Each
# brings the kernel up on the thread `Ida::run` spawns and skips without its precondition
# (`IDAKIT_TEST_DB`, or `g++` for `ctor`). They must not run concurrently (init_library is a
# process global and idalib locks the database file), so `.config/nextest.toml` puts every
# integration test in a `max-threads = 1` group. Run the suite with nextest, never bare
# `cargo test` (which would run them in parallel and collide).

[dev-dependencies]
assert2 = "0.4.0"
libc = "0.2.186"
libtest-mimic = "0.8.2"
proptest = "1.11.0"
rstest = "0.26.1"
serde_json = "1.0.150"

[features]
# serde-backed netnode storage (`put_serde`/`get_serde`); pulls in the postcard codec.
serde = ["dep:postcard"]
